Update the layout to ensure that the rules and bonuses are clearly visible

--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: calc(100vh - 282px);
+  overflow-y: auto; /* 當內容超過高度時出現滾動條 */
 }
 
 .player-list table {
@@ -94,7 +96,7 @@ body {
 }
 
 .clear-btn {
-  margin-top: 40px;
+  margin-top: 20px;
   background-color: #f44336; /* 紅色 */
   color: white;
   border: none;
@@ -179,6 +181,7 @@ body {
   border-radius: 10px;
   margin-bottom: 20px;
   overflow: hidden; /* 防止水平滾動條 */
+  height: 142px;
 }
 
 .budget {
@@ -194,4 +197,10 @@ body {
   border: 1px solid #ddd;
   padding: 8px;
   text-align: center;
+}
+
+.rules-fixed {
+  position: fixed;
+  top: 0;
+  width: calc(50% - 40px);
 }
